[taocp] copied zion_c into code.

--- a/taocp/v4_dlink/Makefile
+++ b/taocp/v4_dlink/Makefile
@@ -6,7 +6,7 @@ SHELL     = bash
 
 # === ZION ---------------------------------------------------------------------
 #
-ZION_PATH = ../../zion/c
+ZION_PATH = zion_c
 include ${ZION_PATH}/zion.mk
 
 # === CFLAGS and LDFLAGS -------------------------------------------------------
