[taocp] added go code.

--- a/taocp/v4_algo_b_basic_backtrack_bit_vec/Makefile
+++ b/taocp/v4_algo_b_basic_backtrack_bit_vec/Makefile
@@ -1,6 +1,5 @@
-MODS    += ${BUILD}/cmd_main.o
-MODS    += ${BUILD_OBJS}/log.o
+compile:
+	go run main.go
 
-include mk.tpl
-
-test: run
+fmt:
+	gofmt -w main.go
