--- a/.github/actions/base/action.yml
+++ b/.github/actions/base/action.yml
@@ -14,6 +14,10 @@ inputs:
     default: false
   gcc_version:
     default: 14
+  require_go:
+    default: false
+  go_version:
+    default: 1.23
 runs:
   using: "composite"
   steps:
@@ -73,3 +77,18 @@ runs:
       run: ${CC} --version
 
 
+    # === --- Go related --------------------------------------------------- ===
+    #
+    - name: Set environmental variables for Go
+      if: ${{ inputs.require_go == 'true' }}
+      shell: bash
+      run: |
+        echo "GO=/usr/lib/go-${{ inputs.go_version }}/bin/go" >> $GITHUB_ENV
+    - name: Install Go
+      if: ${{ inputs.require_go == 'true' }}
+      shell: bash
+      run: sudo apt-get install -y --no-install-recommends golang-${{ inputs.go_version }}
+    - name: Display Go version
+      if: ${{ inputs.require_go == 'true' }}
+      shell: bash
+      run: ${GO} version
