--- a/taocp/v4_algo_b_basic_backtrack_bit_vec/Makefile
+++ b/taocp/v4_algo_b_basic_backtrack_bit_vec/Makefile
@@ -1,5 +1,17 @@
 run:
 	cargo run
 
+compile:
+	cargo build
+
+release:
+	cargo build --release
+
+test:
+	cargo test
+
 fmt:
 	cargo fmt
+
+clean:
+	cargo clean
