--- a/.github/workflows/taocp.yml
+++ b/.github/workflows/taocp.yml
@@ -14,7 +14,7 @@ jobs:
           require_gcc: true
           require_clang: true
           clang_version: 19
-          require_go: true
+          require_rs: true
 
       - name: Run ${{ github.workflow }} Test
         run: make -C ${{ github.workspace }}/z/${{ github.workflow }} clean test
