--- a/taocp/v4_algo_b_basic_backtrack_bit_vec/Makefile
+++ b/taocp/v4_algo_b_basic_backtrack_bit_vec/Makefile
@@ -5,7 +5,7 @@ compile:
 	cargo build
 
 release:
-	cargo build --release
+	RUSTFLAGS="-C target-cpu=native" cargo build --release
 
 test:
 	cargo test
