--- a/taocp/mk/Makefile.v1
+++ b/taocp/mk/Makefile.v1
@@ -13,6 +13,9 @@ BUILD       = .build
 BUILD_OBJS  = ${BUILD}/objs
 MAIN_OUT    = a.out
 
+UNAME_S    := $(shell uname -s)
+
+
 CXXFLAGS   += -std=c++17
 CXXFLAGS   += -Wall -Werror -pedantic -Wextra -Wfatal-errors -Wconversion
 CXXFLAGS   += -fno-rtti -fno-exceptions
@@ -25,7 +28,11 @@ SRC_DEPS    += $(wildcard cmd/*.cc)
 ifdef RELEASE
 CXXFLAGS   += -DNDEBUG -O3 -march=native
 CXXFLAGS   += -flto -ffast-math
+
+ifeq ($(UNAME_S),Linux)
 LDFLAGS    += -fuse-ld=lld
+endif
+
 else
 CXXFLAGS   += -g
 endif
