[taocp] added basic version of walker algo w.

--- a/taocp/v4_algo_w_walker_backtrack/Makefile
+++ b/taocp/v4_algo_w_walker_backtrack/Makefile
@@ -1,3 +1,6 @@
+# Disable warning for multiple unsequencing access to the counter.
+CXXFLAGS += -Wno-unsequenced
+
 MODS    += ${BUILD}/cmd_main.o
 MODS    += ${BUILD_OBJS}/log.o
 
