--- a/taocp/v4_7.1.1.algo_c_core_computation_for_definite_horn/Makefile
+++ b/taocp/v4_7.1.1.algo_c_core_computation_for_definite_horn/Makefile
@@ -1,6 +1,6 @@
 MODS    += ${BUILD}/cmd_main.o
+MODS    += ${BUILD_OBJS}/horn.o
 MODS    += ${BUILD_OBJS}/log.o
-#MODS    += ${BUILD_OBJS}/horn.o
 
 include mk.tpl
 
