--- a/.github/workflows/c4c.yml
+++ b/.github/workflows/c4c.yml
@@ -16,6 +16,6 @@ jobs:
         shell: bash
         run: sudo apt-get install -y --no-install-recommends libopenblas-dev
       - name: Run ${{ github.workflow }} ASAN Test
-        run: make -C ${{ github.workspace }}/z/intelligence/${{ github.workflow }} ASAN=1 BLAS=1 MCTS_ITER_CNT=10 MCTS_SELF_PLAY=1 clean compile
+        run: make -C ${{ github.workspace }}/z/intelligence/${{ github.workflow }} ASAN=1 BLAS=1 MCTS_ITER_CNT=10 MCTS_SELF_PLAY=1 clean run
       - name: Run ${{ github.workflow }} Release
-        run: make -C ${{ github.workspace }}/z/intelligence/${{ github.workflow }} RELEASE=1 BLAS=1 MCTS_ITER_CNT=10 MCTS_SELF_PLAY=1 clean compile
+        run: make -C ${{ github.workspace }}/z/intelligence/${{ github.workflow }} RELEASE=1 BLAS=1 MCTS_ITER_CNT=10 MCTS_SELF_PLAY=1 clean run
