[taocp] rename const.

--- a/taocp/v4_7.4.1.2.algo_t_strong_components/Makefile
+++ b/taocp/v4_7.4.1.2.algo_t_strong_components/Makefile
@@ -4,4 +4,7 @@ MODS    += ${BUILD_OBJS}/log.o
 
 include mk.tpl
 
+# Few labels in the algorithm are not used.
+CXXFLAGS += -Wno-unused-label
+
 test: run
