--- a/intelligence/c4x/Makefile
+++ b/intelligence/c4x/Makefile
@@ -6,6 +6,7 @@ DATA_FILE = https://github.com/xiejw/z/releases/download/v0.0.3/tensor_data.bin
 #
 MODS    += ${BUILD}/cmd_main.o
 MODS    += ${BUILD_OBJS}/log.o
+MODS    += ${BUILD_OBJS}/nn.o
 MODS    += ${BUILD_OBJS}/tensor.o
 
 include mk.tpl
