--- a/intelligence/c4x/Makefile
+++ b/intelligence/c4x/Makefile
@@ -7,6 +7,7 @@ DATA_FILE = https://github.com/xiejw/z/releases/download/v0.0.3/tensor_data.bin
 MODS    += ${BUILD}/cmd_main.o
 MODS    += ${BUILD_OBJS}/game.o
 MODS    += ${BUILD_OBJS}/log.o
+MODS    += ${BUILD_OBJS}/mcts.o
 MODS    += ${BUILD_OBJS}/nn.o
 MODS    += ${BUILD_OBJS}/tensor.o
 
