[taocp] added (39) on page 61.

--- a/taocp/v4_7.1.1.them_k_2sat_krom_clauses/Makefile
+++ b/taocp/v4_7.1.1.them_k_2sat_krom_clauses/Makefile
@@ -1,5 +1,6 @@
 MODS    += ${BUILD}/cmd_main.o
 MODS    += ${BUILD_OBJS}/graph_sgb.o
+MODS    += ${BUILD_OBJS}/two_sat_solver.o
 MODS    += ${BUILD_OBJS}/log.o
 
 include mk.tpl
