[taocp] split node and item

--- a/taocp/v4_7.2.2.1.algo_x_exact_cover_via_dancing_links/Makefile
+++ b/taocp/v4_7.2.2.1.algo_x_exact_cover_via_dancing_links/Makefile
@@ -1,9 +1,23 @@
+# Split the deps out as the test needs them.  main fn should be unique in each
+# binary.
+#
+# TODO introduce mk.v2 to make main easier.
+DEPS    += ${BUILD_OBJS}/log.o
+DEPS    += ${BUILD_OBJS}/dlink.o
+
+MODS    += ${DEPS}
 MODS    += ${BUILD}/cmd_main.o
-MODS    += ${BUILD_OBJS}/log.o
-MODS    += ${BUILD_OBJS}/dlink.o
+
+DLINK_TEST = ${BUILD}/dlink_test
 
 include mk.tpl
 
-CXXFLAGS += -Wno-unused-private-field
+compile: ${DLINK_TEST}
 
-test: run
+test: ${DLINK_TEST}
+	${DLINK_TEST}
+
+${DLINK_TEST}: ${DEPS} ${BUILD}/cmd_dlink_test.o | ${BUILD}
+	${CXX} ${LDFLAGS} -o $@ $^
+
+CXXFLAGS += -Wno-unused-private-field
