[taocp] added dlink append options.

--- a/taocp/v4_7.2.2.1.algo_x_exact_cover_via_dancing_links/Makefile
+++ b/taocp/v4_7.2.2.1.algo_x_exact_cover_via_dancing_links/Makefile
@@ -21,3 +21,5 @@ ${DLINK_TEST}: ${DEPS} ${BUILD}/cmd_dlink_test.o | ${BUILD}
 	${CXX} ${LDFLAGS} -o $@ $^
 
 CXXFLAGS += -Wno-unused-private-field
+CXXFLAGS += -Wno-unused-variable
+CXXFLAGS += -Wno-unused-parameter
