[taocp] can run but might have bug.

--- a/taocp/v4_7.2.2.1.algo_x_exact_cover_via_dancing_links/Makefile
+++ b/taocp/v4_7.2.2.1.algo_x_exact_cover_via_dancing_links/Makefile
@@ -12,6 +12,8 @@ DLINK_TEST = ${BUILD}/dlink_test
 
 include mk.tpl
 
+CXXFLAGS += -Wno-unused-label
+
 compile: ${DLINK_TEST}
 
 test: ${DLINK_TEST}
