[taocp] added dlink to main makefile.

--- a/taocp/Makefile
+++ b/taocp/Makefile
@@ -3,10 +3,10 @@ MODS     += v4_7.1.1.theo_k_2sat_krom_clauses
 MODS     += v4_7.2.2.algo_b_basic_backtrack
 MODS     += v4_7.2.2.algo_b_basic_backtrack_bit_vec
 MODS     += v4_7.2.2.algo_w_walker_backtrack
+MODS     += v4_7.2.2.1.algo_x_exact_cover_via_dancing_links
 MODS     += v4_7.2.2.4.algo_h_all_hamiltonian_cycles
 MODS     += v4_7.4.1.2.algo_t_strong_components
 
-# MODS     += v4_dlink
 # MODS     += v4_sat
 
 compile:
