--- a/taocp/v4_7.2.2.1.algo_x_exact_cover_via_dancing_links/Makefile
+++ b/taocp/v4_7.2.2.1.algo_x_exact_cover_via_dancing_links/Makefile
@@ -1,24 +1,14 @@
-# Split the deps out as the test needs them.  main fn should be unique in each
-# binary.
-#
-# TODO introduce mk.v2 to make main easier.
-DEPS    += ${BUILD_OBJS}/log.o
-DEPS    += ${BUILD_OBJS}/dlink.o
+MODS    += ${BUILD_OBJS}/log.o
+MODS    += ${BUILD_OBJS}/dlink.o
 
-MODS    += ${DEPS}
-MODS    += ${BUILD}/cmd_main.o
+MAIN_OUT = main
 
-DLINK_TEST = ${BUILD}/dlink_test
+TEST_OUT = dlink_test
 
 include mk.tpl
 
 CXXFLAGS += -Wno-unused-label
 
-compile: ${DLINK_TEST}
-
-test: ${DLINK_TEST}
-	${DLINK_TEST}
-
-${DLINK_TEST}: ${DEPS} ${BUILD}/cmd_dlink_test.o | ${BUILD}
-	${CXX} ${LDFLAGS} -o $@ $^
+$(eval $(call CMD_template,${TEST_OUT}))
+$(eval $(call TEST_template,${TEST_OUT}))
 
