[taocp] sudoku works.

--- a/taocp/v4_7.2.2.1.algo_x_exact_cover_via_dancing_links/Makefile
+++ b/taocp/v4_7.2.2.1.algo_x_exact_cover_via_dancing_links/Makefile
@@ -9,6 +9,10 @@ include mk.tpl
 
 CXXFLAGS += -Wno-unused-label
 
+# Main is tested
+$(eval $(call TEST_template,${MAIN_OUT}))
+
+# TEST is tested
 $(eval $(call CMD_template,${TEST_OUT}))
 $(eval $(call TEST_template,${TEST_OUT}))
 
