[taocp] sat watch can run now.

--- a/taocp/Makefile
+++ b/taocp/Makefile
@@ -4,6 +4,7 @@ MODS     += v4_7.2.2.algo_b_basic_backtrack
 MODS     += v4_7.2.2.algo_b_basic_backtrack_bit_vec
 MODS     += v4_7.2.2.algo_w_walker_backtrack
 MODS     += v4_7.2.2.1.algo_x_exact_cover_via_dancing_links
+MODS     += v4_7.2.2.2.algo_b_satisfiability_by_watching
 MODS     += v4_7.2.2.4.algo_h_all_hamiltonian_cycles
 MODS     += v4_7.4.1.2.algo_t_strong_components
 
