[taocp] move the tests into cmd.

--- a/taocp/v4_7.2.2.2.algo_b_satisfiability_by_watching/Makefile
+++ b/taocp/v4_7.2.2.2.algo_b_satisfiability_by_watching/Makefile
@@ -4,7 +4,7 @@ MODS    += ${BUILD_OBJS}/sat_watch.o
 
 MAIN_OUT = main
 
-TEST_OUT = dlink_test
+TEST_OUT = test_main
 
 include mk.tpl
 
@@ -13,7 +13,7 @@ CXXFLAGS += -Wno-unused-label
 # Main is tested
 $(eval $(call TEST_template,${MAIN_OUT}))
 
-## TEST is tested
-#$(eval $(call CMD_template,${TEST_OUT}))
-#$(eval $(call TEST_template,${TEST_OUT}))
+# TEST is tested
+$(eval $(call CMD_template,${TEST_OUT}))
+$(eval $(call TEST_template,${TEST_OUT}))
 
