[taocp] added green bar.

--- a/taocp/mk/Makefile.v2
+++ b/taocp/mk/Makefile.v2
@@ -88,6 +88,7 @@ endef
 define TEST_template
 
 test_$(1): compile $${BUILD}/$(1)
+	printf "\e[42m%*s\e[0m\n" "$$(shell tput cols)" ""
 	$${BUILD}/$(1)
 
 test: test_$(1)
