[taocp] run equali in github action.

--- a/.github/workflows/taocp.yml
+++ b/.github/workflows/taocp.yml
@@ -14,6 +14,11 @@ jobs:
           require_clang: true
           clang_version: 20
 
+      - name: Equali
+        run: |
+          curl -L -o /tmp/equali https://github.com/xiejw/z/releases/download/v0.0.4/equali
+          cd ${{ github.workspace }}/z/${{ github.workflow }}
+          /tmp/equali
       - name: Run ${{ github.workflow }} Test
         run: make -C ${{ github.workspace }}/z/${{ github.workflow }} clean test
       - name: Run ${{ github.workflow }} ASAN Test
