[taocp] use RUNNER_TEMP.

--- a/.github/workflows/taocp.yml
+++ b/.github/workflows/taocp.yml
@@ -16,9 +16,9 @@ jobs:
 
       - name: Equali
         run: |
-          curl -L -o /tmp/equali https://github.com/xiejw/z/releases/download/v0.0.4/equali
+          curl -L -o ${RUNNER_TEMP}/equali https://github.com/xiejw/z/releases/download/v0.0.4/equali
           cd ${{ github.workspace }}/z/${{ github.workflow }}
-          /tmp/equali
+          ${RUNNER_TEMP}/equali
       - name: Run ${{ github.workflow }} Test
         run: make -C ${{ github.workspace }}/z/${{ github.workflow }} clean test
       - name: Run ${{ github.workflow }} ASAN Test
